# CohereX

./: .gitignore  README.md  pyproject.toml
coherex/: README.md  __init__.py  __main__.py  alignment.py  asr.py  configuration_cohere_asr.py  processing_cohere_asr.py  pyproject.toml  tokenization_cohere_asr.py  transcribe.py
coherex/coherex/: SubtitlesProcessor.py  __init__.py  __main__.py  alignment.py  asr.py  audio.py  configuration_cohere_asr.py  log_utils.py  modeling_cohere_asr.py  transcribe.py
coherex/coherex/lids/: speechbrain.py
coherex/coherex/vads/: __init__.py  firered.py  pyannote.py
coherex/lids/: __init__.py  base.py  taltech.py
coherex/tests/: test_batch_inference.py  test_chunking.py  test_cuda_device_routing.py  test_model_resolution.py  test_regression_transcripts.py  test_regression_transcripts_auto_language.py  test_regression_transcripts_firered.py  test_regression_vad_pyannote.py  test_suppress_numerals.py
coherex/tests/fixtures/: coherex_suppress_numerals_off.txt  coherex_suppress_numerals_on.txt  regression_language_id.json  whisperx_suppress_numerals_off.txt
coherex/vads/: __init__.py  binarize.py
tests/: test_cuda_device_routing.py  test_language_id.py  test_language_validation.py  test_model_resolution.py  test_nemo_alignment.py  test_qwen_alignment.py  test_regression_word_alignment.py
tests/fixtures/: regression_transcripts.json  regression_vad_pyannote_whisperx.json  regression_word_alignment.json  whisperx_suppress_numerals_on.txt
